hidden fight upon none picking an option

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div id="main-content-selection">
         choose your fighter
         <div class="dropdown-fighters">
-            <select id="select-fighter" onChange="showFight()">
-                <option value="hello">pick your fighter</option>
+            <select id="select-fighter">
+                <option value="">pick your fighter</option>
                 <!--serena-->
                 <option value="serena">captain america</option>
                 <!--avital-->
