photo on selection

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <!--fix for transition-->
 <script></script>
 
-
 <div id="main-background">
     <img class="gayng-background" src="images/gayng.png"/>
+
     <div id="main-content-selection">
         choose your fighter
         <div class="dropdown-fighters">
@@ -43,6 +43,7 @@
         </div>
     </div>
     <div id="information-card">
+        <img class="hero-photo" src="">
         <div class="hero-name"> firstName lastName </div>
         <div class="hero-superpower"> superpower </div>
         <div class="hero-info"> with this hero you will get the ultimate fight. </div>
