kind of finished

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="App.js"></script>
     <title>gayng</title>
 </head>
@@ -20,19 +21,19 @@
             <select id="select-fighter">
                 <option value="">pick your fighter</option>
                 <!--serena-->
-                <option value="serena">captain america</option>
+                <option value="Serena">captain america</option>
                 <!--avital-->
-                <option value="avital">homopohobic panther</option>
+                <option value="Avital">homopohobic panther</option>
                 <!--misha-->
-                <option value="misha">hikingman</option>
+                <option value="Misha">hikingman</option>
                 <!--sara-->
-                <option value="sara">political widow</option>
+                <option value="Sara">political widow</option>
                 <!--rina-->
-                <option value="rina">codeverina</option>
+                <option value="Rina">codeverina</option>
                 <!--aya-->
-                <option value="aya">X-woman</option>
+                <option value="Aya">X-woman</option>
                 <!--dani-->
-                <option value="dani">poleboy</option>
+                <option value="Dani">poleboy</option>
             </select>
             <script type="text/javascript">
                 document.getElementById('select-fighter').addEventListener('change', getSelection);
